--- a/flaskstarter/templates/frontend/tutorial.html
+++ b/flaskstarter/templates/frontend/tutorial.html
@@ -3,15 +3,27 @@
 {% extends 'layouts/base.html' %}
 
 {% block body %}
-<div class="section02" style="padding-top: 100px">
-  <div class="container">
+<div class="section03">
+  <div class="container" style="padding: 0px;">
     <div class="row justify-content-center">
       <div class="boldauto36">Tutorial</div>
     </div>
-    <div class="row justify-content-center">
-      <div class="boldauto36">Tutorial</div>
+    <div class="row">
+      <div class="container tutorialCard" style="padding: 0px;">
+        <div class="row tutorialTitle">How to...</div>
+        <div class="row container" style="padding: 30px 40px 30px 40px; border-top: 1px solid #B4B6B8;" hidden>
+          <div class="row tutorialContent">
+            If you want to ....
+          </div>
+          <div class="row tutorialLink">
+            <a>http://www.d24h.tutorial.hk</a>
+          </div>
+        </div>
+      </div>
     </div>
+
   </div>
+</div>
 </div>
 
 {% endblock %}
