--- a/flaskstarter/templates/frontend/tutorial.html
+++ b/flaskstarter/templates/frontend/tutorial.html
@@ -9,14 +9,39 @@
       <div class="boldauto36">Tutorial</div>
     </div>
     <div class="row">
-      <div class="container tutorialCard" style="padding: 0px;">
-        <div class="row tutorialTitle">How to...</div>
-        <div class="row container" style="padding: 30px 40px 30px 40px; border-top: 1px solid #B4B6B8;" hidden>
-          <div class="row tutorialContent">
+      <div class="container tutorialCard collapsible" style="padding: 0px; margin-bottom: 24px;">
+        <div class="row tutorialTitle boldH160">How to...</div>
+        <div class="row container collapsible-text"
+          style="padding: 30px 40px 30px 40px; border-top: 1px solid #B4B6B8;">
+          <div class="row tutorialContent regularauto16">
             If you want to ....
           </div>
           <div class="row tutorialLink">
-            <a>http://www.d24h.tutorial.hk</a>
+            <a href="http://www.d24h.tutorial.hk">http://www.d24h.tutorial.hk</a>
+          </div>
+        </div>
+      </div>
+      <div class="container tutorialCard collapsible" style="padding: 0px; margin-bottom: 24px;">
+        <div class="row tutorialTitle boldH160">How to...</div>
+        <div class="row container collapsible-text"
+          style="padding: 30px 40px 30px 40px; border-top: 1px solid #B4B6B8;">
+          <div class="row tutorialContent regularauto16">
+            If you want to ....
+          </div>
+          <div class="row tutorialLink">
+            <a href="http://www.d24h.tutorial.hk">http://www.d24h.tutorial.hk</a>
+          </div>
+        </div>
+      </div>
+      <div class="container tutorialCard collapsible" style="padding: 0px; margin-bottom: 24px;">
+        <div class="row tutorialTitle boldH160">How to...</div>
+        <div class="row container collapsible-text"
+          style="padding: 30px 40px 30px 40px; border-top: 1px solid #B4B6B8;">
+          <div class="row tutorialContent regularauto16">
+            If you want to ....
+          </div>
+          <div class="row tutorialLink">
+            <a href="http://www.d24h.tutorial.hk">http://www.d24h.tutorial.hk</a>
           </div>
         </div>
       </div>
